# CODEX

./: .gitignore  ANSWERBUILDER_PROVENANCE.md  DEPLOYMENT_READY.md  ENHANCEMENT_OPPORTUNITIES.md  EVENT_ORIGIN_EXPANSION.md  INTEGRATION_KICKOFF_STATUS.md  Makefile  PATCH_NOTES_CODEX_MAIN_22_CONSISTENCY_CLEANUP.md  PATCH_NOTES_CODEX_MAIN_36_TRUTH_REPRODUCIBILITY.md  PATCH_NOTES_v0.6.md  PATCH_NOTES_v0.7.md  PATCH_NOTES_v0.8.md  PHASE_10_DISCOVERY.md  PHASE_10_PLAN.md  PHASE_10_SUMMARY.md  PHASE_15_IMPLEMENTATION_COMPLETE.md  PHASE_6_SUMMARY.md  PHASE_7_PLAN.md  PHASE_7_SUMMARY.md  PHASE_8_PLAN.md  PHASE_8_SUMMARY.md  PHASE_9_DISCOVERY.md  PHASE_9_PLAN.md  PHASE_9_PROOF_SUMMARY.md  PHASE_9_SUMMARY.md  README.md  RETRIEVAL_POLICY_SPEC.md  STATUS.md  UI_BRIDGE_METADATA.md  UI_TEST_REPORT.md  VALIDATION_READINESS.md  architecture_guard.py  pyproject.toml
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
core/: types.py
docs/: ARCHITECTURE.md  CHAT_UI_INTEGRATION.md  EVIDENCE_GROUNDED_RUNTIME_INTEGRATION.md  HARDENING_REPORT_CODEX_MAIN_34.md  HARDENING_REPORT_CODEX_MAIN_36.md  INTEGRATION_IMPLEMENTATION_ROADMAP.md  LEGACY_BOUNDARIES.md  LIMITATIONS.md  MEMORY_CLAIM_MODEL.md  MIGRATION_FROM_GLOBAL_SENTIENCE.md  NEXT_PHASE_EVIDENCE_GROUNDED_RUNTIME_INTEGRATION.md  NEXT_PHASE_EVIDENCE_MEMORY_PLAN.md  OPERATIONAL_PRESSURE_MODULATOR.md  PHASE_STATUS_AND_ROADMAP.md  PROOF_LIMITATIONS.md  PROOF_MODEL.md  PROVIDER_TOOL_POLICY.md  (+3 more)
global-workspace-runtime-rs/: Cargo.toml
global-workspace-runtime-rs/artifacts/proof/latest/: replay_report.json
global-workspace-runtime-rs/crates/cognition/: Cargo.toml
global-workspace-runtime-rs/crates/cognition/src/: candidate.rs  critic.rs  lib.rs  planner.rs
global-workspace-runtime-rs/crates/contradiction/: Cargo.toml
global-workspace-runtime-rs/crates/contradiction/src/: lib.rs
global-workspace-runtime-rs/crates/evidence/: Cargo.toml
global-workspace-runtime-rs/crates/evidence/src/: lib.rs
global-workspace-runtime-rs/crates/governed-memory/: Cargo.toml  README.md
global-workspace-runtime-rs/crates/governed-memory/src/: admission.rs  audit.rs  belief_conflict.rs  codex_adapter.rs  enums.rs  lib.rs  policy.rs  proof_bridge.rs  reason_codes.rs  retrieval_intent.rs  retrieval_planner.rs  schemas.rs  source_trust.rs
global-workspace-runtime-rs/crates/governed-memory/tests/: admission_tests.rs  codex_adapter_tests.rs  retrieval_intent_tests.rs  source_trust_tests.rs
global-workspace-runtime-rs/crates/gw-workspace/: Cargo.toml
global-workspace-runtime-rs/crates/gw-workspace/src/: lib.rs
global-workspace-runtime-rs/crates/memory/: Cargo.toml
global-workspace-runtime-rs/crates/memory/src/: answer_builder.rs  claim_store.rs  durable_memory_provider.rs  lib.rs  memory_provider.rs  status_mapping.rs
global-workspace-runtime-rs/crates/modulation/: Cargo.toml
global-workspace-runtime-rs/crates/modulation/src/: internal_state.rs  lib.rs  pressure.rs  resonance.rs  resources.rs  self_model.rs  somatic.rs
global-workspace-runtime-rs/crates/runtime-cli/: Cargo.toml
global-workspace-runtime-rs/crates/runtime-cli/src/: main.rs
global-workspace-runtime-rs/crates/runtime-cli/tests/: cli_tests.rs
global-workspace-runtime-rs/crates/runtime-core/: Cargo.toml
global-workspace-runtime-rs/crates/runtime-core/src/: action.rs  errors.rs  event.rs  event_log.rs  lib.rs  memory_provider.rs  mode.rs  observation.rs  reasoning_audit.rs  reducer.rs  replay.rs  replay_verifier.rs  runtime_loop.rs  runtime_state.rs  runtime_step_result.rs  symbolic_activator.rs  trace.rs  types.rs
global-workspace-runtime-rs/crates/runtime-core/tests/: integration_tests.rs  replay_durability.rs
global-workspace-runtime-rs/crates/simworld/: Cargo.toml
global-workspace-runtime-rs/crates/simworld/src/: adversarial.rs  environment.rs  evaluator.rs  evaluator_trace.rs  lib.rs  long_horizon.rs  nl_scenarios.rs  scenario.rs  scorecard.rs  sim_types.rs
global-workspace-runtime-rs/crates/simworld/tests/: integration_tests.rs  learning_loop_tests.rs  oracle_guard.rs
global-workspace-runtime-rs/crates/symbolic/: Cargo.toml
global-workspace-runtime-rs/crates/symbolic/src/: abstraction.rs  analytic_stream.rs  associative_stream.rs  compression.rs  conceptual_blender.rs  creative_stream.rs  glyph.rs  lib.rs  principle.rs  resonance.rs  symbol.rs  symbol_graph.rs  symbolic_frame.rs  symbolic_memory.rs  symbolic_trace.rs
global-workspace-runtime-rs/crates/symbolic/tests/: integration_tests.rs
global-workspace-runtime-rs/crates/tools/: Cargo.toml
global-workspace-runtime-rs/crates/tools/src/: lib.rs
runtime/kernel/: Cargo.toml  LEGACY.md
runtime/kernel/src/: lib.rs
runtime/kernel/src/event/: log.rs  mod.rs  types.rs
runtime/kernel/src/replay/: engine.rs  mod.rs  reducer.rs
runtime/kernel/src/runtime/: state.rs
runtime/kernel/src/simworld/: adversarial_events.rs  environment.rs  evaluator.rs  mod.rs  scenario.rs  scorecard.rs  types.rs
runtime/kernel/tests/: adversarial.rs  property_tests.rs  replay_invariant.rs  scorecard.rs
ui/codex-dioxus/: Cargo.toml  Dioxus.toml  METRICS_CICD_INTEGRATION.md  OBSERVABILITY_GUIDE.md  PHASE_13_COMPLETE.md  PHASE_13_PLAN.md  PHASE_13_PROGRESS.md  TESTING.md
ui/codex-dioxus/assets/: main.css
ui/codex-dioxus/src/: app.rs  main.rs
ui/codex-dioxus/src/bridge/: instrumentation.rs  live_claim_store_bridge.rs  live_event_bridge.rs  live_evidence_vault_bridge.rs  metrics.rs  mod.rs  pressure_metrics_bridge.rs  proof_reader.rs  runtime_client.rs  state_provider.rs  trace_cycle_bridge.rs  tracing_setup.rs  types.rs  ui_state.rs
ui/codex-dioxus/src/components/: action_schema_panel.rs  action_trace_panel.rs  audit_panel.rs  basis_items_table.rs  chat_input.rs  chat_view.rs  claim_details_panel.rs  command_queue.rs  console_panel.rs  evidence_panel.rs  message_bubble.rs  mod.rs  pressure_dynamics_chart.rs  pressure_panel.rs  proof_dashboard.rs  runtime_status.rs  settings_panel.rs  timeline_viewer.rs  trace_viewer.rs
ui/codex-dioxus/src/tests/: e2e_component_integration.rs  mod.rs  test_utils.rs
(+219 files in other folders)
