[project]
name = "global-workspace-runtime"
version = "0.6.0"
description = "Functional workspace runtime research prototype using LLMs as candidate generators."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
