[workspace]
members = [
    "crates/runtime-core",
    "crates/simworld",
    "crates/modulation",
    "crates/cognition",
    "crates/symbolic",
    "crates/memory",
    "crates/evidence",
    "crates/gw-workspace",
    "crates/runtime-cli",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = { version = "0.8", features = ["small_rng"] }
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1"
anyhow      = "1"
proptest    = "1"
insta       = { version = "1", features = ["yaml"] }
