[package]
name = "gw-kernel"
version = "0.1.0"
edition = "2021"
description = "Global Workspace Runtime — deterministic kernel"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }

[[test]]
name = "replay_invariant"
path = "tests/replay_invariant.rs"

[[test]]
name = "scorecard"
path = "tests/scorecard.rs"

[[test]]
name = "adversarial"
path = "tests/adversarial.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[features]
default = ["jsonl_archive"]
jsonl_archive = []
