[package]
name = "codex-dioxus"
version = "0.1.0"
edition = "2021"
description = "CODEX desktop proof/runtime dashboard shell"
license = "MIT"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
runtime-core = { path = "../../global-workspace-runtime-rs/crates/runtime-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
