[package]
name = "codex-dioxus"
version = "0.1.0"
edition = "2021"
description = "CODEX desktop proof/runtime dashboard shell"
license = "MIT"

# Feature flags
# ui-local-providers: enables experimental localhost Ollama/Turboquant bridge modes.
# NOT enabled by default. Default build has zero provider HTTP code paths.
[features]
ui-local-providers = ["dep:reqwest", "dep:futures-util"]

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
runtime-core = { path = "../../global-workspace-runtime-rs/crates/runtime-core" }
governed-memory = { path = "../../global-workspace-runtime-rs/crates/governed-memory" }
memory = { path = "../../global-workspace-runtime-rs/crates/memory" }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
