[package]
name        = "contradiction"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
memory      = { path = "../memory" }

[dev-dependencies]
