[package]
name        = "evidence"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
runtime-core = { path = "../runtime-core" }

[dev-dependencies]
tempfile = "3"
