[package]
name = "governed-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }


[dev-dependencies]
proptest.workspace = true
insta.workspace = true
