[package]
name = "memory"
version.workspace = true
edition.workspace = true

[dependencies]
runtime-core = { path = "../runtime-core" }
evidence = { path = "../evidence" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
