[package]
name = "memory"
version.workspace = true
edition.workspace = true

[dependencies]
runtime-core = { path = "../runtime-core" }
evidence = { path = "../evidence" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
