[package]
name        = "runtime-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "runtime-cli"
path = "src/main.rs"

[dependencies]
runtime-core = { path = "../runtime-core" }
simworld     = { path = "../simworld" }
modulation   = { path = "../modulation" }
cognition    = { path = "../cognition" }
symbolic     = { path = "../symbolic" }
memory       = { path = "../memory" }
evidence     = { path = "../evidence" }
contradiction = { path = "../contradiction" }
gw-workspace = { path = "../gw-workspace" }
governed-memory = { path = "../governed-memory" }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
