[package]
name        = "runtime-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tools       = { path = "../tools" }

[dev-dependencies]
