[package]
name = "simworld"
version.workspace = true
edition.workspace = true

[dependencies]
runtime-core = { path = "../runtime-core" }
evidence     = { path = "../evidence" }
memory       = { path = "../memory" }
modulation   = { path = "../modulation" }
contradiction = { path = "../contradiction" }
tools        = { path = "../tools" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
